--- a/render.yaml
+++ b/render.yaml
@@ -33,4 +33,4 @@ services:
         fromService:
           type: web
           name: oncologIA-backend
-          property: url
+          property: host
